--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "bin":{
+    "orbital":"./src/cli/main.js"
+  },
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
@@ -12,11 +15,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.19.0",
     "better-auth": "^1.4.5",
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "figlet": "^1.9.4",
+    "yocto-spinner": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
