--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-  "bin":{
-    "orbital":"./src/cli/main.js"
+  "bin": {
+    "orbital": "./src/cli/main.js"
   },
   "scripts": {
     "dev": "nodemon src/index.js",
@@ -15,8 +15,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/google": "^3.0.2",
     "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.19.0",
+    "ai": "^6.0.7",
     "better-auth": "^1.4.5",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
