--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "@ai-sdk/google": "^3.0.2",
     "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.19.0",
-    "ai": "^6.0.7",
+    "ai": "^6.0.59",
     "better-auth": "^1.4.5",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
@@ -34,5 +34,8 @@
   "devDependencies": {
     "nodemon": "^3.1.11",
     "prisma": "^6.19.0"
+  },
+  "prisma":{
+    "schema":"prisma/schema.prisma"
   }
 }
