--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "build": "prisma generate",
-    "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && prisma migrate deploy"
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -40,9 +38,5 @@
   },
   "prisma":{
     "schema":"prisma/schema.prisma"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
   }
 }
